--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -132,7 +132,7 @@ jobs:
           security create-keychain -p "$KEYCHAIN_PASSWORD" build.keychain
           security default-keychain -s build.keychain
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" build.keychain
-          security set-keychain-settings -timeout 3600 -lock-on-sleep build.keychain
+          security set-keychain-settings -t 3600 -u build.keychain
 
           # Import certificate
           echo "$CERTIFICATE_BASE64" | base64 --decode > certificate.p12
