--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -89,24 +89,20 @@ jobs:
         run: |
           NEW_VERSION="${{ steps.version.outputs.version_without_v }}"
 
-          # Update version in Main.swift
-          sed -i '' "s/version: \".*\"/version: \"$NEW_VERSION\"/" Sources/Main.swift
+          # Update VERSION file
+          echo "$NEW_VERSION" > VERSION
 
-          # Update version in UpdateChecker.swift
-          sed -i '' "s/currentVersion = \".*\"/currentVersion = \"$NEW_VERSION\"/" Sources/UpdateChecker.swift
-
-          # Verify the changes
-          grep "version:" Sources/Main.swift
-          grep "currentVersion" Sources/UpdateChecker.swift
+          # Verify the change
+          cat VERSION
 
           # Check if there are changes to commit
-          if git diff --quiet Sources/Main.swift Sources/UpdateChecker.swift; then
+          if git diff --quiet VERSION; then
             echo "No version changes needed"
           else
             # Commit the version update
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add Sources/Main.swift Sources/UpdateChecker.swift
+            git add VERSION
             git commit -m "chore: bump version to $NEW_VERSION"
             git push
           fi
@@ -157,7 +153,11 @@ jobs:
           BINARY_NAME="xcstrings-localizer"
 
           if [ -f "$BINARY_NAME" ]; then
-            zip -j "$BINARY_NAME-$VERSION-macos.zip" "$BINARY_NAME"
+            # Copy VERSION file to binary directory
+            cp "${GITHUB_WORKSPACE}/VERSION" .
+
+            # Package binary and VERSION file together
+            zip -j "$BINARY_NAME-$VERSION-macos.zip" "$BINARY_NAME" "VERSION"
             echo "PACKAGE_PATH=$BINARY_PATH/$BINARY_NAME-$VERSION-macos.zip" >> $GITHUB_ENV
           else
             echo "Binary not found"
