refactor: replace VERSION file with Version.swift
- Create Sources/Version.swift with versionNumber constant
- Remove all VERSION file reading logic from UpdateChecker.swift
- UpdateChecker now simply uses Version.versionNumber (no fallbacks needed)
- Update GitHub Actions workflows to update Version.swift instead of VERSION file
- Remove VERSION file packaging from release workflows
- Update install.sh to not check for or install VERSION file
- Delete VERSION file

Benefits:
- Version is compiled into binary, no external file needed
- Simpler code with no file I/O or fallback logic
- No files need to ride along with the binary
- Cleaner installation process

--- a/.github/workflows/manual-release.yml
+++ b/.github/workflows/manual-release.yml
@@ -89,20 +89,20 @@ jobs:
         run: |
           NEW_VERSION="${{ steps.version.outputs.version_without_v }}"
 
-          # Update VERSION file
-          echo "$NEW_VERSION" > VERSION
+          # Update Version.swift
+          sed -i '' "s/versionNumber = \".*\"/versionNumber = \"$NEW_VERSION\"/" Sources/Version.swift
 
           # Verify the change
-          cat VERSION
+          grep "versionNumber" Sources/Version.swift
 
           # Check if there are changes to commit
-          if git diff --quiet VERSION; then
+          if git diff --quiet Sources/Version.swift; then
             echo "No version changes needed"
           else
             # Commit the version update
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add VERSION
+            git add Sources/Version.swift
             git commit -m "chore: bump version to $NEW_VERSION"
             git push
           fi
@@ -153,11 +153,7 @@ jobs:
           BINARY_NAME="xcstrings-localizer"
 
           if [ -f "$BINARY_NAME" ]; then
-            # Copy VERSION file to binary directory
-            cp "${GITHUB_WORKSPACE}/VERSION" .
-
-            # Package binary and VERSION file together
-            zip -j "$BINARY_NAME-$VERSION-macos.zip" "$BINARY_NAME" "VERSION"
+            zip -j "$BINARY_NAME-$VERSION-macos.zip" "$BINARY_NAME"
             echo "PACKAGE_PATH=$BINARY_PATH/$BINARY_NAME-$VERSION-macos.zip" >> $GITHUB_ENV
           else
             echo "Binary not found"
